@@ -11,7 +11,6 @@ import com.liferay.dynamic.data.mapping.test.util.DDMFormValuesTestUtil;
 import com.liferay.petra.lang.CentralizedThreadLocal;
 import com.liferay.petra.string.StringPool;
 import com.liferay.portal.kernel.test.ReflectionTestUtil;
-import com.liferay.portal.kernel.test.rule.NewEnv;
 import com.liferay.portal.kernel.util.FastDateFormatFactoryUtil;
 import com.liferay.portal.kernel.util.HashMapBuilder;
 import com.liferay.portal.kernel.util.LocaleThreadLocal;
@@ -32,8 +31,6 @@ import org.junit.Test;
 /**
  * @author Bruno Basto
  */
-@NewEnv(type = NewEnv.Type.JVM)
-@NewEnv.JVMArgsLine("-Djava.locale.providers=CLDR")
 public class DateDDMFormFieldValueRendererTest {
 
 	@ClassRule
@@ -90,13 +87,13 @@ public class DateDDMFormFieldValueRendererTest {
 			).put(
 				LocaleUtil.GERMANY, "25.01.2015"
 			).put(
-				LocaleUtil.HUNGARY, "2015.01.25."
+				LocaleUtil.HUNGARY, "2015. 01. 25."
 			).put(
 				LocaleUtil.JAPAN, "2015/01/25"
 			).put(
 				LocaleUtil.NETHERLANDS, "25-01-2015"
 			).put(
-				LocaleUtil.SIMPLIFIED_CHINESE, "2015-01-25"
+				LocaleUtil.SIMPLIFIED_CHINESE, "2015/01/25"
 			).put(
 				LocaleUtil.SPAIN, "25/01/2015"
 			).put(
@@ -115,7 +112,7 @@ public class DateDDMFormFieldValueRendererTest {
 				).setExtension(
 					Locale.UNICODE_LOCALE_EXTENSION, "nu-arab"
 				).build(),
-				"٢٥\u200F/٠١\u200F/٢٠١٥ ٠١:٠٠ ص"
+				"٢٥\u200F/٠١\u200F/٢٠١٥, ٠١:٠٠ ص"
 			).put(
 				LocaleUtil.BRAZIL, "25/01/2015 01:00"
 			).put(
@@ -125,21 +122,21 @@ public class DateDDMFormFieldValueRendererTest {
 			).put(
 				LocaleUtil.FRANCE, "25/01/2015 01:00"
 			).put(
-				LocaleUtil.GERMANY, "25.01.2015 01:00"
+				LocaleUtil.GERMANY, "25.01.2015, 01:00"
 			).put(
-				LocaleUtil.HUNGARY, "2015.01.25. 01:00"
+				LocaleUtil.HUNGARY, "2015. 01. 25. 01:00"
 			).put(
 				LocaleUtil.JAPAN, "2015/01/25 01:00"
 			).put(
 				LocaleUtil.NETHERLANDS, "25-01-2015 01:00"
 			).put(
-				LocaleUtil.SIMPLIFIED_CHINESE, "2015-01-25 上午01:00"
+				LocaleUtil.SIMPLIFIED_CHINESE, "2015/01/25 上午01:00"
 			).put(
 				LocaleUtil.SPAIN, "25/01/2015 01:00"
 			).put(
 				new Locale("sv", "SE"), "2015-01-25 01:00"
 			).put(
-				LocaleUtil.US, "01/25/2015 01:00 AM"
+				LocaleUtil.US, "01/25/2015, 01:00 AM"
 			).build(),
 			"2015-01-25 1:00");
 		_assertRenderValues(
@@ -156,7 +153,7 @@ public class DateDDMFormFieldValueRendererTest {
 		_assertRenderValues(
 			_getSingleValueExpectedValuesMap("01/25/2015"), "2015-01-25");
 		_assertRenderValues(
-			_getSingleValueExpectedValuesMap("01/25/2015 01:00 AM"),
+			_getSingleValueExpectedValuesMap("01/25/2015, 01:00 AM"),
 			"2015-01-25 1:00");
 	}
 
