@@ -13,10 +13,12 @@ import com.liferay.petra.process.ProcessConfig;
 import com.liferay.petra.process.ProcessException;
 import com.liferay.petra.process.ProcessExecutor;
 import com.liferay.petra.process.ProcessLog;
+import com.liferay.petra.string.CharPool;
 import com.liferay.petra.string.StringBundler;
 import com.liferay.petra.string.StringPool;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
+import com.liferay.portal.kernel.util.ArrayUtil;
 import com.liferay.portal.kernel.util.HashMapBuilder;
 import com.liferay.portal.kernel.util.JavaDetector;
 import com.liferay.portal.kernel.util.ListUtil;
@@ -24,10 +26,7 @@ import com.liferay.portal.kernel.util.OSDetector;
 import com.liferay.portal.kernel.util.StringUtil;
 import com.liferay.portal.kernel.util.Validator;
 import com.liferay.portal.search.elasticsearch7.internal.configuration.ElasticsearchConfigurationWrapper;
-import com.liferay.portal.search.elasticsearch7.internal.connection.ElasticsearchInstancePaths;
-import com.liferay.portal.search.elasticsearch7.internal.connection.ElasticsearchInstanceSettingsBuilder;
-import com.liferay.portal.search.elasticsearch7.internal.connection.HttpPortRange;
-import com.liferay.portal.search.elasticsearch7.internal.index.constants.SidecarVersionConstants;
+import com.liferay.portal.search.elasticsearch7.internal.sidecar.constants.SidecarConstants;
 import com.liferay.portal.search.elasticsearch7.internal.util.ResourceUtil;
 import com.liferay.portal.util.PropsValues;
 
@@ -42,6 +41,7 @@ import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
 
 import java.security.CodeSource;
 import java.security.ProtectionDomain;
@@ -55,9 +55,11 @@ import java.util.Objects;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Consumer;
 
 import org.elasticsearch.common.settings.Settings;
 
+import org.objectweb.asm.MethodVisitor;
 import org.objectweb.asm.Opcodes;
 
 /**
@@ -87,7 +89,9 @@ public class Sidecar {
 			_log.debug("Sidecar Elasticsearch starting");
 		}
 
-		_installElasticsearchIfNeeded();
+		String sidecarVersion = _getSidecarVersion();
+
+		_installElasticsearchIfNeeded(sidecarVersion);
 
 		ProcessChannel<Serializable> processChannel =
 			_executeSidecarMainProcess();
@@ -102,8 +106,8 @@ public class Sidecar {
 		if (_log.isInfoEnabled()) {
 			_log.info(
 				StringBundler.concat(
-					"Sidecar Elasticsearch ", _getNodeName(), " started at ",
-					address));
+					"Sidecar Elasticsearch ", sidecarVersion, StringPool.SPACE,
+					_getNodeName(), " started at ", address));
 		}
 
 		_address = address;
@@ -209,15 +213,17 @@ public class Sidecar {
 		}
 	}
 
-	private ProcessConfig _createProcessConfig(String sidecarLibClassPath) {
+	private ProcessConfig _createProcessConfig() {
 		ProcessConfig.Builder builder = new ProcessConfig.Builder();
 
 		URL bundleURL = _getBundleURL();
 
+		String bootstrapClassPath = _getBootstrapClassPath();
+
 		return builder.setArguments(
 			_getJVMArguments(bundleURL)
 		).setBootstrapClassPath(
-			_getBootstrapClassPath()
+			bootstrapClassPath
 		).setEnvironment(
 			_getEnvironment()
 		).setJavaExecutable(
@@ -228,8 +234,7 @@ public class Sidecar {
 			Sidecar.class.getClassLoader()
 		).setRuntimeClassPath(
 			StringBundler.concat(
-				sidecarLibClassPath, File.pathSeparator, bundleURL.getPath(),
-				File.pathSeparator, _getBootstrapClassPath())
+				bundleURL.getPath(), File.pathSeparator, bootstrapClassPath)
 		).build();
 	}
 
@@ -240,16 +245,12 @@ public class Sidecar {
 					_sidecarHomePath);
 		}
 
-		String sidecarLibClassPath = _createClasspath(
-			_sidecarHomePath.resolve("lib"), path -> true);
-
 		try {
 			return _processExecutor.execute(
-				_createProcessConfig(sidecarLibClassPath),
+				_createProcessConfig(),
 				new SidecarMainProcessCallable(
 					_elasticsearchConfigurationWrapper.
-						sidecarHeartbeatInterval(),
-					_getModifiedClasses(sidecarLibClassPath)));
+						sidecarHeartbeatInterval()));
 		}
 		catch (ProcessException processException) {
 			throw new RuntimeException(
@@ -261,11 +262,7 @@ public class Sidecar {
 	private boolean _fileNameContains(Path path, String s) {
 		String name = String.valueOf(path.getFileName());
 
-		if (name.contains(s)) {
-			return true;
-		}
-
-		return false;
+		return name.contains(s);
 	}
 
 	private String _getBootstrapClassPath() {
@@ -286,16 +283,13 @@ public class Sidecar {
 		return _elasticsearchConfigurationWrapper.clusterName();
 	}
 
-	private Distribution _getElasticsearchDistribution() {
-		String versionNumber = ResourceUtil.getResourceAsString(
-			getClass(), SidecarVersionConstants.SIDECAR_VERSION_FILE_NAME);
-
-		if (versionNumber.equals(ElasticsearchDistribution.VERSION)) {
+	private Distribution _getElasticsearchDistribution(String sidecarVersion) {
+		if (sidecarVersion.equals(ElasticsearchDistribution.VERSION)) {
 			return new ElasticsearchDistribution();
 		}
 
 		throw new IllegalArgumentException(
-			"Unsupported Elasticsearch version: " + versionNumber);
+			"Unsupported Elasticsearch version: " + sidecarVersion);
 	}
 
 	private HashMap<String, String> _getEnvironment() {
@@ -361,96 +355,66 @@ public class Sidecar {
 				ioException);
 		}
 
-		arguments.add("-Des.path.conf=" + configFolder);
-		arguments.add("-Des.networkaddress.cache.ttl=60");
+		arguments.add(
+			"--enable-native-access=org.elasticsearch.nativeaccess," +
+				"org.apache.lucene.core");
+		arguments.add("--enable-native-access=ALL-UNNAMED");
+		arguments.add("-Des.distribution.type=tar");
 		arguments.add("-Des.networkaddress.cache.negative.ttl=10");
-		arguments.add("-Dlog4j.shutdownHookEnabled=false");
-		arguments.add("-Dlog4j2.disable.jmx=true");
-		arguments.add("-Dio.netty.allocator.type=unpooled");
-		arguments.add("-Dio.netty.allocator.numDirectArenas=0");
-		arguments.add("-Dio.netty.noUnsafe=true");
-		arguments.add("-Dio.netty.noKeySetOptimization=true");
-		arguments.add("-Dio.netty.recycler.maxCapacityPerThread=0");
+		arguments.add("-Des.networkaddress.cache.ttl=60");
+		arguments.add("-Des.path.conf=" + configFolder);
 		arguments.add("-Dfile.encoding=UTF-8");
+		arguments.add("-Dio.netty.noKeySetOptimization=true");
+		arguments.add("-Dio.netty.noUnsafe=true");
+		arguments.add("-Dio.netty.recycler.maxCapacityPerThread=0");
+		arguments.add("-Djava.awt.headless=true");
 		arguments.add("-Djava.io.tmpdir=" + _sidecarTempDirPath);
 
-		if (JavaDetector.isJDK21()) {
+		if (JavaDetector.isJDK17() || JavaDetector.isJDK21()) {
 			arguments.add("-Djava.security.manager=allow");
 		}
 
 		arguments.add(
-			"-Djava.security.policy=" +
-				String.valueOf(_getSecurityPolicyURL(bundleURL)));
+			"-Djava.security.policy=" + _getSecurityPolicyURL(bundleURL));
 		arguments.add("-Djna.nosys=true");
+		arguments.add("-Dlog4j.shutdownHookEnabled=false");
+		arguments.add("-Dlog4j2.disable.jmx=true");
+		arguments.add("-Dlog4j2.formatMsgNoLookups=true");
+		arguments.add(
+			"-Dorg.apache.lucene.vectorization.upperJavaFeatureVersion=21");
 
 		if (JavaDetector.isJDK21() && OSDetector.isLinux()) {
 			arguments.add("-XX:-UseContainerSupport");
 		}
+
+		// Modules
+
+		arguments.add("--add-modules=jdk.incubator.vector");
+		arguments.add("--add-modules=jdk.management.agent");
+		arguments.add("--add-modules=jdk.net");
+		arguments.add("--add-modules=ALL-MODULE-PATH");
+		arguments.add(
+			"--add-opens=org.elasticsearch.server/org.elasticsearch." +
+				"bootstrap=ALL-UNNAMED");
+		arguments.add("--module-path=" + _sidecarHomePath.resolve("lib"));
+		arguments.add("-Djdk.module.main=org.elasticsearch.server");
+
+		// Apply module patches for class modifications
+
+		Map<String, Path> patchModulePaths = _patchModuleClasses(
+			_createClasspath(_sidecarHomePath.resolve("lib"), path -> true));
+
+		patchModulePaths.forEach(
+			(moduleName, path) -> {
+				arguments.add("--patch-module");
+				arguments.add(moduleName + "=" + path.toAbsolutePath());
+			});
 
 		return arguments;
 	}
 
 	private String _getLogProperties() {
 		return StringPool.BLANK;
-	}
-
-	private Map<String, byte[]> _getModifiedClasses(
-		String sidecarLibClassPath) {
-
-		Map<String, byte[]> modifiedClasses = new HashMap<>();
-
-		try {
-			ClassLoader classLoader = new URLClassLoader(
-				ClassPathUtil.getClassPathURLs(sidecarLibClassPath), null);
-
-			modifiedClasses.put(
-				"org.elasticsearch.bootstrap.Natives",
-				ClassModificationUtil.getModifiedClassBytes(
-					"org.elasticsearch.bootstrap.Natives",
-					"definitelyRunningAsRoot",
-					methodVisitor -> {
-						methodVisitor.visitCode();
-						methodVisitor.visitInsn(Opcodes.ICONST_0);
-						methodVisitor.visitInsn(Opcodes.IRETURN);
-					},
-					classLoader));
-
-			modifiedClasses.put(
-				"org.elasticsearch.common.settings.KeyStoreWrapper",
-				ClassModificationUtil.getModifiedClassBytes(
-					"org.elasticsearch.common.settings.KeyStoreWrapper", "save",
-					methodVisitor -> {
-						methodVisitor.visitCode();
-						methodVisitor.visitInsn(Opcodes.RETURN);
-					},
-					classLoader));
-
-			modifiedClasses.put(
-				"org.elasticsearch.bootstrap.Security",
-				ClassModificationUtil.getModifiedClassBytes(
-					"org.elasticsearch.bootstrap.Security", "configure",
-					methodVisitor -> {
-						methodVisitor.visitCode();
-						methodVisitor.visitInsn(Opcodes.RETURN);
-					},
-					classLoader));
-
-			modifiedClasses.put(
-				"org.elasticsearch.bootstrap.Spawner",
-				ClassModificationUtil.getModifiedClassBytes(
-					"org.elasticsearch.bootstrap.Spawner",
-					"spawnNativeControllers",
-					methodVisitor -> {
-						methodVisitor.visitCode();
-						methodVisitor.visitInsn(Opcodes.RETURN);
-					},
-					classLoader));
-		}
-		catch (Exception exception) {
-			_log.error("Unable to modify classes", exception);
-		}
-
-		return modifiedClasses;
 	}
 
 	private String _getNodeName() {
@@ -460,14 +424,15 @@ public class Sidecar {
 			return nodeName;
 		}
 
-		return "liferay";
+		return "liferay_sidecar";
 	}
 
 	private URL _getSecurityPolicyURL(URL bundleURL) {
 		try (URLClassLoader urlClassLoader = new URLClassLoader(
 				new URL[] {bundleURL})) {
 
-			return urlClassLoader.findResource("META-INF/sidecar.policy");
+			return urlClassLoader.findResource(
+				SidecarConstants.SIDECAR_POLICY_FILE_NAME);
 		}
 		catch (IOException ioException) {
 			throw new RuntimeException(ioException);
@@ -491,29 +456,34 @@ public class Sidecar {
 		).build();
 	}
 
-	private String[] _getSidecarArguments() {
+	private SidecarServerArgs _getSidecarServerArgs() {
 		Settings settings = _getSettings();
 
 		StringBundler sb = new StringBundler((2 * settings.size()) + 1);
 
 		sb.append("Sidecar Elasticsearch properties : {");
 
-		List<String> arguments = new ArrayList<>();
+		Map<String, Serializable> settingsMap = new HashMap<>();
 
 		for (String key : settings.keySet()) {
-			arguments.add("-E");
-
 			List<String> list = settings.getAsList(key);
 
-			if (ListUtil.isNotEmpty(list)) {
-				String keyValue = StringBundler.concat(
-					key, StringPool.EQUAL, StringUtil.merge(list));
+			if (ListUtil.isEmpty(list)) {
+				continue;
+			}
 
-				arguments.add(keyValue);
+			String keyValue = StringBundler.concat(
+				key, StringPool.EQUAL, StringUtil.merge(list));
 
-				sb.append(keyValue);
+			sb.append(keyValue);
 
-				sb.append(StringPool.COMMA);
+			sb.append(StringPool.COMMA);
+
+			if (list.size() == 1) {
+				settingsMap.put(key, list.get(0));
+			}
+			else {
+				settingsMap.put(key, new ArrayList<>(list));
 			}
 		}
 
@@ -523,26 +493,123 @@ public class Sidecar {
 			_log.debug(sb.toString());
 		}
 
-		return arguments.toArray(new String[0]);
+		return new SidecarServerArgs(
+			String.valueOf(_sidecarTempDirPath.resolve("config")), false,
+			String.valueOf(_sidecarHomePath.resolve("logs")), null, false,
+			settingsMap);
 	}
 
-	private void _installElasticsearchIfNeeded() {
+	private String _getSidecarVersion() {
+		return ResourceUtil.getResourceAsString(
+			getClass(), SidecarConstants.SIDECAR_VERSION_FILE_NAME);
+	}
+
+	private void _installElasticsearchIfNeeded(String sidecarVersion) {
 		ElasticsearchInstaller.builder(
 		).distributablesDirectoryPath(
 			_elasticsearchInstancePaths.getWorkPath()
 		).distribution(
-			_getElasticsearchDistribution()
+			_getElasticsearchDistribution(sidecarVersion)
 		).installationDirectoryPath(
 			_sidecarHomePath
 		).build(
 		).install();
 	}
 
+	private void _patchModuleClass(
+			Map<String, Path> patchModulePaths, String moduleName,
+			String className, String methodName,
+			Consumer<MethodVisitor> methodVisitorConsumer,
+			ClassLoader classLoader)
+		throws Exception {
+
+		Path patchModulePath = _sidecarTempDirPath.resolve(
+			Paths.get("patch-module", moduleName));
+
+		String[] parts = StringUtil.split(className, CharPool.PERIOD);
+
+		Path classPackagePath = patchModulePath.resolve(
+			Paths.get(parts[0], ArrayUtil.subset(parts, 1, parts.length - 1)));
+
+		Files.createDirectories(classPackagePath);
+
+		Files.write(
+			classPackagePath.resolve(parts[parts.length - 1] + ".class"),
+			ClassModificationUtil.getModifiedClassBytes(
+				className, methodName, methodVisitorConsumer, classLoader),
+			StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+
+		patchModulePaths.putIfAbsent(moduleName, patchModulePath);
+	}
+
+	private Map<String, Path> _patchModuleClasses(String sidecarLibClassPath) {
+		Map<String, Path> patchModulePaths = new HashMap<>();
+
+		try {
+			ClassLoader classLoader = new URLClassLoader(
+				ClassPathUtil.getClassPathURLs(sidecarLibClassPath), null);
+
+			_patchModuleClass(
+				patchModulePaths, "org.elasticsearch.entitlement",
+				"org.elasticsearch.entitlement.bootstrap.EntitlementBootstrap",
+				"bootstrap", _wipingLogicMethodVisitorConsumer, classLoader);
+
+			_patchModuleClass(
+				patchModulePaths, "org.elasticsearch.nativeaccess",
+				"org.elasticsearch.nativeaccess.PosixNativeAccess",
+				"definitelyRunningAsRoot",
+				methodVisitor -> {
+					methodVisitor.visitCode();
+					methodVisitor.visitInsn(Opcodes.ICONST_0);
+					methodVisitor.visitInsn(Opcodes.IRETURN);
+				},
+				classLoader);
+
+			_patchModuleClass(
+				patchModulePaths, "org.elasticsearch.server",
+				"org.elasticsearch.bootstrap.Bootstrap", "sendCliMarker",
+				_wipingLogicMethodVisitorConsumer, classLoader);
+
+			_patchModuleClass(
+				patchModulePaths, "org.elasticsearch.server",
+				"org.elasticsearch.bootstrap.Elasticsearch",
+				"startCliMonitorThread", _wipingLogicMethodVisitorConsumer,
+				classLoader);
+
+			_patchModuleClass(
+				patchModulePaths, "org.elasticsearch.server",
+				"org.elasticsearch.bootstrap.Elasticsearch$" +
+					"EntitlementSelfTester",
+				"entitlementSelfTest", _wipingLogicMethodVisitorConsumer,
+				classLoader);
+
+			_patchModuleClass(
+				patchModulePaths, "org.elasticsearch.server",
+				"org.elasticsearch.common.settings.KeyStoreWrapper", "save",
+				_wipingLogicMethodVisitorConsumer, classLoader);
+
+			_patchModuleClass(
+				patchModulePaths, "org.elasticsearch.server",
+				"org.elasticsearch.bootstrap.Security", "configure",
+				_wipingLogicMethodVisitorConsumer, classLoader);
+
+			_patchModuleClass(
+				patchModulePaths, "org.elasticsearch.server",
+				"org.elasticsearch.bootstrap.Spawner", "spawnNativeControllers",
+				_wipingLogicMethodVisitorConsumer, classLoader);
+		}
+		catch (Exception exception) {
+			_log.error("Unable to modify classes", exception);
+		}
+
+		return patchModulePaths;
+	}
+
 	private String _startElasticsearch(
 		ProcessChannel<Serializable> processChannel) {
 
 		NoticeableFuture<String> noticeableFuture = processChannel.write(
-			new StartSidecarProcessCallable(_getSidecarArguments()));
+			new StartSidecarProcessCallable(_getSidecarServerArgs()));
 
 		try {
 			return _waitForPublishedAddress(noticeableFuture);
@@ -581,7 +648,7 @@ public class Sidecar {
 			return noticeableFuture.get();
 		}
 		catch (ExecutionException executionException) {
-			throw (Exception)executionException.getCause();
+			throw new Exception(executionException.getCause());
 		}
 		catch (InterruptedException interruptedException) {
 			throw new RuntimeException(interruptedException);
@@ -589,6 +656,12 @@ public class Sidecar {
 	}
 
 	private static final Log _log = LogFactoryUtil.getLog(Sidecar.class);
+
+	private static final Consumer<MethodVisitor>
+		_wipingLogicMethodVisitorConsumer = methodVisitor -> {
+			methodVisitor.visitCode();
+			methodVisitor.visitInsn(Opcodes.RETURN);
+		};
 
 	private String _address;
 	private final ElasticsearchConfigurationWrapper
