@@ -19,6 +19,8 @@ import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 
 import com.liferay.gradle.plugins.LiferayBasePlugin;
 import com.liferay.gradle.plugins.extensions.LiferayExtension;
+import com.liferay.gradle.plugins.lang.builder.BuildLangTask;
+import com.liferay.gradle.plugins.lang.builder.LangBuilderPlugin;
 import com.liferay.gradle.plugins.node.task.ExecuteNodeTask;
 import com.liferay.gradle.plugins.workspace.WorkspaceExtension;
 import com.liferay.gradle.plugins.workspace.WorkspacePlugin;
@@ -30,6 +32,7 @@ import com.liferay.gradle.plugins.workspace.internal.util.JsonNodeUtil;
 import com.liferay.gradle.plugins.workspace.internal.util.StringUtil;
 import com.liferay.gradle.plugins.workspace.internal.util.copy.HashifyAction;
 import com.liferay.gradle.plugins.workspace.task.CreateClientExtensionConfigTask;
+import com.liferay.gradle.plugins.workspace.task.WriteLanguageBatchEngineDataTask;
 import com.liferay.gradle.util.ArrayUtil;
 import com.liferay.gradle.util.Validator;
 
@@ -37,13 +40,17 @@ import groovy.lang.Closure;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.UncheckedIOException;
 
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -73,10 +80,12 @@ import org.gradle.api.invocation.Gradle;
 import org.gradle.api.logging.Logger;
 import org.gradle.api.plugins.BasePlugin;
 import org.gradle.api.plugins.ExtensionAware;
+import org.gradle.api.plugins.PluginManager;
 import org.gradle.api.provider.Property;
 import org.gradle.api.provider.SetProperty;
 import org.gradle.api.tasks.Copy;
 import org.gradle.api.tasks.Delete;
+import org.gradle.api.tasks.JavaExec;
 import org.gradle.api.tasks.TaskContainer;
 import org.gradle.api.tasks.TaskInputs;
 import org.gradle.api.tasks.TaskOutputs;
@@ -101,9 +110,6 @@ public class ClientExtensionProjectConfigurator
 	public static final String BUILD_SITE_INITIALIZER_ZIP_TASK_NAME =
 		"buildSiteInitializerZip";
 
-	public static final String CLIENT_EXTENSION_BUILD_DIR =
-		"liferay-client-extension-build";
-
 	public static final String CREATE_CLIENT_EXTENSION_CONFIG_TASK_NAME =
 		"createClientExtensionConfig";
 
@@ -112,6 +118,18 @@ public class ClientExtensionProjectConfigurator
 
 	public static final String VALIDATE_CLIENT_EXTENSIONS_TASK_NAME =
 		"validateClientExtensions";
+
+	public static final String WRITE_LANGUAGE_BATCH_ENGINE_DATA_TASK_NAME =
+		"writeLanguageBatchEngineData";
+
+	public static String getClientExtensionBuildDir(Project project) {
+		WorkspaceExtension workspaceExtension = GradleUtil.getExtension(
+			(ExtensionAware)project.getGradle(), WorkspaceExtension.class);
+
+		return StringUtil.suffixIfNotBlank(
+			"liferay-client-extension-build",
+			workspaceExtension.getVirtualInstanceId());
+	}
 
 	public ClientExtensionProjectConfigurator(Settings settings) {
 		super(settings);
@@ -227,23 +245,18 @@ public class ClientExtensionProjectConfigurator
 
 								}));
 
-						_clientExtensionIds.compute(
-							clientExtension.id,
-							(key, value) -> {
-								if (value == null) {
-									value = new HashSet<>();
-								}
-
-								value.add(project);
-
-								return value;
-							});
+						_registerClientExtensionId(project, clientExtension.id);
 
 						createClientExtensionConfigTaskProvider.configure(
 							createClientExtensionConfigTask -> {
 								if (!_isActiveProfile(project, profileName)) {
 									return;
 								}
+
+								createClientExtensionConfigTask.
+									setVirtualInstanceId(
+										workspaceExtension.
+											getVirtualInstanceId());
 
 								createClientExtensionConfigTask.
 									addClientExtension(clientExtension);
@@ -299,6 +312,14 @@ public class ClientExtensionProjectConfigurator
 			createClientExtensionConfigTaskProvider, workspaceExtension);
 
 		_configureLiferayRoutes(project, workspaceExtension);
+
+		if (_isLanguageProject(project)) {
+			GradleUtil.applyPlugin(project, LangBuilderPlugin.class);
+
+			_configureLanguageProject(project);
+		}
+
+		_configureSpringBootPlugin(project);
 	}
 
 	@Override
@@ -326,6 +347,12 @@ public class ClientExtensionProjectConfigurator
 					String dirName = String.valueOf(dirPath.getFileName());
 
 					if (isExcludedDirName(dirName)) {
+						return FileVisitResult.SKIP_SUBTREE;
+					}
+
+					if (_isLanguageProject(rootDir, dirPath.toFile())) {
+						projectDirs.add(dirPath.toFile());
+
 						return FileVisitResult.SKIP_SUBTREE;
 					}
 
@@ -482,7 +509,7 @@ public class ClientExtensionProjectConfigurator
 			buildSiteInitializerZipTaskProvider,
 			createClientExtensionConfigTaskProvider,
 			validateClientExtensionIdsTaskProvider,
-			validateClientExtensionTaskProvider);
+			validateClientExtensionTaskProvider, workspaceExtension);
 
 		addTaskDockerDeploy(
 			project, buildClientExtensionZipTaskProvider,
@@ -558,7 +585,8 @@ public class ClientExtensionProjectConfigurator
 								}
 
 								copySpec.exclude(
-									"**/" + CLIENT_EXTENSION_BUILD_DIR);
+									"**/" +
+										getClientExtensionBuildDir(project));
 
 								if (includeJsonNode instanceof ArrayNode) {
 									ArrayNode arrayNode =
@@ -591,9 +619,27 @@ public class ClientExtensionProjectConfigurator
 	private Map<String, JsonNode> _configureClientExtensionJsonNodes(
 		Project project, TaskProvider<?>... taskProviders) {
 
-		Map<String, JsonNode> profileJsonNodes = new HashMap<>();
+		if (_isLanguageProject(project)) {
+			InputStream inputStream =
+				WriteLanguageBatchEngineDataTask.class.getResourceAsStream(
+					"dependencies/templates/language/client-extension.yaml");
+
+			try {
+				return Collections.singletonMap(
+					"default", _yamlObjectMapper.readTree(inputStream));
+			}
+			catch (IOException ioException) {
+				throw new UncheckedIOException(ioException);
+			}
+		}
 
 		File clientExtensionYamlFile = project.file(_CLIENT_EXTENSION_YAML);
+
+		if (!clientExtensionYamlFile.exists()) {
+			return Collections.emptyMap();
+		}
+
+		Map<String, JsonNode> profileJsonNodes = new HashMap<>();
 
 		JsonNode rootJsonNode = _getJsonNode(clientExtensionYamlFile);
 
@@ -654,7 +700,8 @@ public class ClientExtensionProjectConfigurator
 		TaskProvider<CreateClientExtensionConfigTask>
 			createClientExtensionConfigTaskProvider,
 		TaskProvider<Task> validateClientExtensionIdsTaskProvider,
-		TaskProvider<Task> validateClientExtensionTaskProvider) {
+		TaskProvider<Task> validateClientExtensionTaskProvider,
+		WorkspaceExtension workspaceExtension) {
 
 		File clientExtensionYamlFile = project.file(_CLIENT_EXTENSION_YAML);
 
@@ -665,28 +712,45 @@ public class ClientExtensionProjectConfigurator
 					VALIDATE_CLIENT_EXTENSION_IDS_TASK_NAME,
 					VALIDATE_CLIENT_EXTENSIONS_TASK_NAME);
 
-				TaskInputs taskInputs =
-					createClientExtensionConfigTask.getInputs();
+				if (clientExtensionYamlFile.exists()) {
+					TaskInputs taskInputs =
+						createClientExtensionConfigTask.getInputs();
 
-				taskInputs.file(clientExtensionYamlFile);
+					taskInputs.file(clientExtensionYamlFile);
+				}
 			});
 
 		File clientExtensionBuildDir = new File(
-			project.getBuildDir(), CLIENT_EXTENSION_BUILD_DIR);
+			project.getBuildDir(), getClientExtensionBuildDir(project));
 
 		assembleClientExtensionTaskProvider.configure(
 			copy -> {
-				TaskInputs taskInputs = copy.getInputs();
+				if (clientExtensionYamlFile.exists()) {
+					TaskInputs taskInputs = copy.getInputs();
 
-				taskInputs.file(clientExtensionYamlFile);
+					taskInputs.file(clientExtensionYamlFile);
+				}
 
 				copy.into(clientExtensionBuildDir);
 
+				copy.doFirst(
+					new Action<Task>() {
+
+						@Override
+						public void execute(Task task) {
+							Copy copy1 = (Copy)task;
+
+							project.delete(copy1.getDestinationDir());
+						}
+
+					});
 				copy.doLast(
 					new Action<Task>() {
 
 						@Override
-						public void execute(Task copy1) {
+						public void execute(Task task) {
+							Copy copy1 = (Copy)task;
+
 							if (!copy1.getDidWork()) {
 								return;
 							}
@@ -724,7 +788,9 @@ public class ClientExtensionProjectConfigurator
 
 							@Override
 							public String call() throws Exception {
-								return project.getName();
+								return StringUtil.suffixIfNotBlank(
+									project.getName(),
+									workspaceExtension.getVirtualInstanceId());
 							}
 
 						}));
@@ -744,9 +810,11 @@ public class ClientExtensionProjectConfigurator
 						"unique among all projects.");
 				task.setGroup(LifecycleBasePlugin.VERIFICATION_GROUP);
 
-				TaskInputs taskInputs = task.getInputs();
+				if (clientExtensionYamlFile.exists()) {
+					TaskInputs taskInputs = task.getInputs();
 
-				taskInputs.file(clientExtensionYamlFile);
+					taskInputs.file(clientExtensionYamlFile);
+				}
 
 				TaskOutputs taskOutputs = task.getOutputs();
 
@@ -803,9 +871,11 @@ public class ClientExtensionProjectConfigurator
 
 		validateClientExtensionTaskProvider.configure(
 			task -> {
-				TaskInputs taskInputs = task.getInputs();
+				if (clientExtensionYamlFile.exists()) {
+					TaskInputs taskInputs = task.getInputs();
 
-				taskInputs.file(clientExtensionYamlFile);
+					taskInputs.file(clientExtensionYamlFile);
+				}
 
 				TaskOutputs taskOutputs = task.getOutputs();
 
@@ -870,6 +940,31 @@ public class ClientExtensionProjectConfigurator
 			});
 	}
 
+	private void _configureLanguageProject(Project project) {
+		TaskProvider<BuildLangTask> buildLangTaskProvider =
+			GradleUtil.getTaskProvider(
+				project, LangBuilderPlugin.BUILD_LANG_TASK_NAME,
+				BuildLangTask.class);
+
+		buildLangTaskProvider.configure(
+			task -> {
+				task.setLangDir(project.getProjectDir());
+
+				Project rootProject = project.getRootProject();
+
+				task.setWorkingDir(rootProject.getProjectDir());
+			});
+
+		TaskProvider<WriteLanguageBatchEngineDataTask>
+			writeLanguageBatchEngineDataTaskProvider =
+				GradleUtil.addTaskProvider(
+					project, WRITE_LANGUAGE_BATCH_ENGINE_DATA_TASK_NAME,
+					WriteLanguageBatchEngineDataTask.class);
+
+		writeLanguageBatchEngineDataTaskProvider.configure(
+			task -> task.dependsOn(buildLangTaskProvider));
+	}
+
 	private void _configureLiferayExtension(
 		Project project, LiferayExtension liferayExtension) {
 
@@ -896,8 +991,12 @@ public class ClientExtensionProjectConfigurator
 
 		Map<String, String> environmentVariables = new HashMap<>();
 
-		String liferayVirtualInstanceId = GradleUtil.getProperty(
-			project.getRootProject(), "liferay.virtual.instance.id", "default");
+		String liferayVirtualInstanceId =
+			workspaceExtension.getVirtualInstanceId();
+
+		if (StringUtil.isBlank(liferayVirtualInstanceId)) {
+			liferayVirtualInstanceId = "default";
+		}
 
 		environmentVariables.put(
 			_ENV_LIFERAY_ROUTES_CLIENT_EXTENSION,
@@ -995,6 +1094,54 @@ public class ClientExtensionProjectConfigurator
 			});
 	}
 
+	private void _configureSpringBootPlugin(Project project) {
+		PluginManager pluginManager = project.getPluginManager();
+
+		Map<String, String> environmentMap = Collections.singletonMap(
+			"JDK_JAVA_OPTIONS",
+			StringUtil.concat(
+				"--add-opens=java.base/java.lang=ALL-UNNAMED ",
+				"--add-opens=java.base/java.lang.invoke=ALL-UNNAMED ",
+				"--add-opens=java.base/java.lang.reflect=ALL-UNNAMED ",
+				"--add-opens=java.base/java.net=ALL-UNNAMED ",
+				"--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED ",
+				"--add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED ",
+				"--add-opens=java.base/sun.util.calendar=ALL-UNNAMED ",
+				"--add-opens=jdk.zipfs/jdk.nio.zipfs=ALL-UNNAMED"));
+
+		pluginManager.withPlugin(
+			"org.springframework.boot",
+			appliedPlugin -> {
+				TaskContainer taskContainer = project.getTasks();
+
+				taskContainer.withType(
+					JavaExec.class,
+					javaExecTask -> {
+						javaExecTask.environment(environmentMap);
+
+						Logger logger = javaExecTask.getLogger();
+
+						if (!logger.isInfoEnabled()) {
+							return;
+						}
+
+						logger.info(
+							StringUtil.concat(
+								"Injected the environment variable ",
+								" \"JDK_JAVA_OPTIONS\" into the process ",
+								"invoked by the task {}"),
+							javaExecTask.getPath());
+
+						for (Map.Entry<String, String> entry :
+								environmentMap.entrySet()) {
+
+							logger.info(
+								"{}: {}", entry.getKey(), entry.getValue());
+						}
+					});
+			});
+	}
+
 	private void _configureTaskCheck(Project project) {
 		Task checkTask = GradleUtil.getTask(
 			project, LifecycleBasePlugin.CHECK_TASK_NAME);
@@ -1047,9 +1194,18 @@ public class ClientExtensionProjectConfigurator
 	}
 
 	private boolean _isActiveProfile(Project project, String profileName) {
-		if (Objects.equals(
-				profileName,
-				GradleUtil.getProperty(project, "profileName", "default"))) {
+		return Objects.equals(
+			profileName,
+			GradleUtil.getProperty(project, "profileName", "default"));
+	}
+
+	private boolean _isLanguageProject(File rootDir, File projectDir) {
+		Path dirPath = projectDir.toPath();
+
+		if (Objects.equals(rootDir.toPath(), dirPath.getParent()) &&
+			dirPath.endsWith(Paths.get("language")) &&
+			Files.exists(
+				Paths.get(dirPath.toString(), "Language.properties"))) {
 
 			return true;
 		}
@@ -1057,16 +1213,48 @@ public class ClientExtensionProjectConfigurator
 		return false;
 	}
 
+	private boolean _isLanguageProject(Project project) {
+		return _isLanguageProject(
+			project.getRootDir(), project.getProjectDir());
+	}
+
+	private void _registerClientExtensionId(
+		Project project, String clientExtensionId) {
+
+		_clientExtensionIds.compute(
+			clientExtensionId,
+			(key, value) -> {
+				if (value == null) {
+					value = new HashSet<>();
+				}
+
+				value.add(project);
+
+				return value;
+			});
+	}
+
 	private void _validateClientExtension(
 		ClientExtension clientExtension, Project project) {
 
 		if (Objects.equals(clientExtension.type, "batch")) {
-			_validateRequiredDirectory(clientExtension, project, "batch");
+			if (!_isLanguageProject(project)) {
+				_validateRequiredDirectory(clientExtension, project, "batch");
+			}
+
 			_validateRequiredTypeSettingsKeys(
 				clientExtension, "oAuthApplicationHeadlessServer");
 		}
+		else if (Objects.equals(clientExtension.type, "globalCSS")) {
+			_validateTypeSettingsValues(
+				clientExtension, "scope", "company", "layout");
+		}
 		else if (Objects.equals(clientExtension.type, "globalJS")) {
 			_validateGlobalJSScriptElementAttributes(clientExtension);
+			_validateTypeSettingsValues(
+				clientExtension, "scope", "company", "layout");
+			_validateTypeSettingsValues(
+				clientExtension, "scriptLocation", "bottom", "head");
 		}
 		else if (Objects.equals(clientExtension.type, "instanceSettings")) {
 			_validateRequiredTypeSettingsKeys(clientExtension, "pid");
@@ -1083,6 +1271,10 @@ public class ClientExtensionProjectConfigurator
 			_validateTypeSettingsValues(
 				clientExtension, "membershipType", "open", "private",
 				"restricted");
+		}
+		else if (Objects.equals(clientExtension.type, "themeCSS")) {
+			_validateTypeSettingsValues(
+				clientExtension, "scope", "controlPanel", "layout");
 		}
 	}
 
